--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/bin/${fileBasename}.out",
+                "${fileDirname}/bin/${fileBasenameNoExtension}.out",
                 "-lraylib", 
                 "-lGL", 
                 "-lm", 
