--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,7 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
+                "${fileDirname}/entity.cpp",
                 "-o",
                 "${fileDirname}/bin/${fileBasenameNoExtension}.out",
                 "-lraylib", 
